--- a/templates/page.html
+++ b/templates/page.html
@@ -27,7 +27,7 @@
   
   <center>
     <div style="border: 2px solid var(--btn-border); padding: 5px; margin: 5px; display: inline-flex; align-items: center; font-size: large;">
-      <div class="nav-links-mobile">
+      <div class="{% if g.is_mobile %}nav-links-mobile{% else %}nav-links-desktop{% endif %}">
         <a href="https://linuxreport.net" target="_blank" style="margin: 2px; color: inherit;">Linux</a>
         <a href="https://covidreport.org" target="_blank" style="margin: 2px; color: inherit;">Covid</a>
         <a href="https://aireport.keithcu.com" target="_blank" style="margin: 2px; color: inherit;">AI</a>
@@ -83,7 +83,7 @@
     <center><img src="{{logo_url}}" alt = "{{ title }}" style="max-height:250px;"></center>
     <center><small>{{ welcome_html }}</small></center>
 
-    <div class="row">
+    <div class="row {% if g.is_mobile %}mobile-view{% else %}desktop-view{% endif %}">
       <div class="column">{{ columns[0] }}</div>
       {%- if not g.is_mobile %}
       <div class="column">{{ columns[1] }}</div>
