--- a/templates/page.html
+++ b/templates/page.html
@@ -29,7 +29,7 @@
     <div style="border: 2px solid var(--btn-border); padding: 5px; margin: 5px; display: inline-flex; align-items: center; font-size: large;">
       <div class="{% if g.is_mobile %}nav-links-mobile{% else %}nav-links-desktop{% endif %}">
         <a href="https://linuxreport.net" target="_blank" style="margin: 2px; color: inherit;">Linux</a>
-        <a href="https://pvreport.org" target="_blank" style="margin: 2px; color: inherit;">PV Report</a>
+        <a href="https://pvreport.org" target="_blank" style="margin: 2px; color: inherit;">PV</a>
         <a href="https://aireport.keithcu.com" target="_blank" style="margin: 2px; color: inherit;">AI</a>
         <a href="https://covidreport.org" target="_blank" style="margin: 2px; color: inherit;">Covid</a>
         <a href="https://trumpreport.info" target="_blank" style="margin: 2px; color: inherit;">Truth</a>
