--- a/templates/page.html
+++ b/templates/page.html
@@ -31,6 +31,7 @@
         <a href="https://linuxreport.net" target="_blank" style="margin: 2px; color: inherit;">Linux</a>
         <a href="https://pvreport.org" target="_blank" style="margin: 2px; color: inherit;">PV</a>
         <a href="https://aireport.keithcu.com" target="_blank" style="margin: 2px; color: inherit;">AI</a>
+        <a href="https://news.thedetroitilove.com" target="_blank" style="margin: 2px; color: inherit;">Techno</a>
         <a href="https://covidreport.org" target="_blank" style="margin: 2px; color: inherit;">Covid</a>
         <a href="https://trumpreport.info" target="_blank" style="margin: 2px; color: inherit;">Truth</a>
         <a href="https://spaceelevatorwiki.com" target="_blank" style="margin: 2px; color: inherit;">Space-Soon</a>
