--- a/templates/page.html
+++ b/templates/page.html
@@ -25,7 +25,7 @@
       </a>
     </div>
     <!-- Moved button outside the a tag -->
-    <span id="weather-collapsed-label" style="display: none; vertical-align: middle;">Weather</span> <!-- Label shown when collapsed -->
+    <span id="weather-collapsed-label" style="display: none; vertical-align: middle;">🌤️ Weather</span> <!-- Label shown when collapsed -->
     <button id="weather-toggle-btn" title="Toggle Weather" style="position: absolute; top: 0; right: 0; background: none; border: none; font-size: 1.2em; cursor: pointer; color: var(--text); padding: 0 5px; z-index: 1; vertical-align: middle;">&#9660;</button> <!-- Down arrow initially -->
   </div>
 </center>
@@ -47,7 +47,7 @@
           <a href="https://linuxreport.net" target="_blank" style="margin: 2px; color: inherit;">Linux</a>
           <a href="https://pvreport.org" target="_blank" style="margin: 2px; color: inherit;">PV</a>
           <a href="https://aireport.keithcu.com" target="_blank" style="margin: 2px; color: inherit;">AI</a>
-          <a href="https://news.thedetroitilove.com" target="_blank" style="margin: 2px; color: inherit;">Techno</a>
+          <a href="https://news.thedetroitilove.com" target="_blank" style="margin: 2px; color: rgb(135, 34, 34);">Techno</a>
           <a href="https://covidreport.org" target="_blank" style="margin: 2px; color: inherit;">Covid</a>
           <a href="https://trumpreport.info" target="_blank" style="margin: 2px; color: inherit;">Truth</a>
           <a href="https://spaceelevatorwiki.com" target="_blank" style="margin: 2px; color: inherit;">Space-Soon</a>
