--- a/templates/page.html
+++ b/templates/page.html
@@ -74,6 +74,7 @@
         </select>
         <select id="font-select" onchange="setFont(this.value)" style="margin-left:20px; padding:5px;">
           <option value="system">System Default</option>
+          <option value="sans-serif">Sans Serif</option>
           <option value="monospace">Monospace</option>
           <option value="inter">Inter</option>
           <option value="roboto">Roboto</option>
