--- a/templates/config.html
+++ b/templates/config.html
@@ -41,9 +41,13 @@
           <label for="no_underlines">No Underlines:</label>
           {{ form.no_underlines }}
         </div>
-        <div class="form-group">
+        <div class="form-group admin-section">
           <label for="admin_mode">Admin Mode:</label>
           {{ form.admin_mode }}
+          <div class="admin-password-field">
+            <label for="admin_password">Password:</label>
+            {{ form.admin_password }}
+          </div>
         </div>
 
         {% if is_admin %}
