--- a/templates/old_headlines.html
+++ b/templates/old_headlines.html
@@ -92,7 +92,7 @@
                 {% for h in headlines %}
                     <div class="headline-entry" data-url="{{ h.url }}" data-timestamp="{{ h.timestamp }}">
                         <div class="headline-title" style="display: flex; align-items: center; justify-content: space-between;">
-                            <span><a href="{{ h.url }}" target="_blank">{{ h.title }}</a></span>
+                            <span><a href="{{ h.url }}" target="_blank">{{ h.title | safe }}</a></span>
                             {% if is_admin %}
                             <button class="delete-headline-btn" title="Delete">&#10005;</button>
                             {% endif %}
