Update error message in auto_update.py for clarity, enhance REPORT_PROMPT in space_report_settings.py, and add multiple new image assets including SVG and PNG files for improved visual content.

--- a/templates/page.html
+++ b/templates/page.html
@@ -51,7 +51,7 @@
           <a href="https://news.thedetroitilove.com" target="_blank" style="margin: 2px; color: rgb(135, 34, 34);">Techno</a>
           <a href="https://covidreport.org" target="_blank" style="margin: 2px; color: inherit;">Covid</a>
           <a href="https://trumpreport.info" target="_blank" style="margin: 2px; color: inherit;">Truth</a>
-          <a href="https://spaceelevatorwiki.com" target="_blank" style="margin: 2px; color: inherit;">Space-Soon</a>
+          <a href="https://news.spaceelevatorwiki.com" target="_blank" style="margin: 2px; color: inherit;">Space!</a>
           <a href="https://keithcu.com/wordpress/?page_id=407/" target="_blank" style="margin: 2px; color: inherit;">Me</a>
         </div>
         <select id="theme-select" onchange="setTheme(this.value)" style="margin-left:20px; padding:5px;">
