--- a/templates/page.html
+++ b/templates/page.html
@@ -48,10 +48,10 @@
           <a href="https://linuxreport.net" target="_blank" style="margin: 2px; color: inherit;">Linux</a>
           <a href="https://pvreport.org" target="_blank" style="margin: 2px; color: inherit;">PV</a>
           <a href="https://aireport.keithcu.com" target="_blank" style="margin: 2px; color: inherit;">AI</a>
-          <a href="https://news.thedetroitilove.com" target="_blank" style="margin: 2px; color: rgb(135, 34, 34);">Techno</a>
+          <a href="https://news.thedetroitilove.com" target="_blank" style="margin: 2px; color: inherit;">Techno</a>
           <a href="https://covidreport.org" target="_blank" style="margin: 2px; color: inherit;">Covid</a>
           <a href="https://trumpreport.info" target="_blank" style="margin: 2px; color: inherit;">Truth</a>
-          <a href="https://news.spaceelevatorwiki.com" target="_blank" style="margin: 2px; color: inherit;">Space!</a>
+          <a href="https://news.spaceelevatorwiki.com" target="_blank" style="margin: 2px; color: rgb(178, 31, 53);">Space!</a>
           <a href="https://keithcu.com/wordpress/?page_id=407/" target="_blank" style="margin: 2px; color: inherit;">Me</a>
         </div>
         <select id="theme-select" onchange="setTheme(this.value)" style="margin-left:20px; padding:5px;">
