--- a/templates/page.html
+++ b/templates/page.html
@@ -40,7 +40,7 @@
         </a>
       </div>
     
-    <center><img src="{{logo_url}}" alt = "{{ title }}" style="max-height:250px;"></center>
+<center><img loading="lazy" src="{{logo_url}}" alt = "{{ title }}" style="max-height:250px;"></center>
     <center><small>{{ welcome_html }}</small></center>
     <center>
       <div style="border: 2px solid var(--btn-border); padding: 5px; margin: 5px; display: inline-flex; align-items: center; font-size: large;">
