--- a/templates/page.html
+++ b/templates/page.html
@@ -12,8 +12,10 @@
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" as="style">
     <!-- Load fonts with font-display: swap -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto:wght@400;500&family=Open+Sans:wght@400;600&family=Source+Sans+Pro:wght@400;600&family=Ubuntu:wght@400;500&family=Noto+Sans:wght@400;500&family=Lato:wght@400;700&family=Raleway:wght@400;500&display=swap&font-display=swap">
-    <!-- Link external CSS -->
-    <link rel="stylesheet" href="/static/linuxreport.css?v={{ static_file_hash('linuxreport.css') }}">
+    <!-- Link external CSS using Flask-Assets -->
+    {% assets "css_all" %}
+    <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}">
+    {% endassets %}
   </head>
   <body>
 
@@ -127,7 +129,9 @@
         <button id="chat-send-btn">Send</button>
       </div>
     </div>
-    <!-- Link external JS at end of body -->
-    <script src="/static/linuxreport.js?v={{ static_file_hash('linuxreport.js') }}"></script>
+    <!-- Link external JS using Flask-Assets -->
+    {% assets "js_all" %}
+    <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+    {% endassets %}
   </body>
 </html>
