--- a/templates/sitebox.html
+++ b/templates/sitebox.html
@@ -1,9 +1,5 @@
 <div class="box" id="feed-{{ feed_id }}">
-<div style="display: flex; justify-content: center; align-items: center; padding: 8px 0;">
-  <a target="_blank" href="{{ link }}">
-    <img loading="lazy" src="{{ logo }}" alt="{{ alt_tag | safe }}" style="max-height: 100px; display: block; margin: 0 auto;" />
-  </a>
-</div>
+<center><a target="_blank" href="{{ link }}"><img loading="lazy" src="{{ logo }}" alt="{{ alt_tag | safe }}" style="max-height:100px;"/></a></center>
   <center>
     <small>Last updated: {{ last_fetch }}</small>
   </center>
