--- a/templates/page.html
+++ b/templates/page.html
@@ -47,13 +47,13 @@
     <center>
       <div style="border: 2px solid var(--btn-border); padding: 5px; margin: 5px; display: inline-flex; align-items: center; font-size: large;">
         <div class="{% if g.is_mobile %}nav-links-mobile{% else %}nav-links-desktop{% endif %}">
-          <a href="https://linuxreport.net" target="_blank" style="margin: 2px; color: inherit;">Linux</a>
-          <a href="https://pvreport.org" target="_blank" style="margin: 2px; color: inherit;">PV</a>
-          <a href="https://aireport.keithcu.com" target="_blank" style="margin: 2px; color: inherit;">AI</a>
-          <a href="https://news.thedetroitilove.com" target="_blank" style="margin: 2px; color: inherit;">Techno</a>
-          <a href="https://covidreport.org" target="_blank" style="margin: 2px; color: inherit;">Covid</a>
-          <a href="https://trumpreport.info" target="_blank" style="margin: 2px; color: inherit;">Truth</a>
-          <a href="https://news.spaceelevatorwiki.com" target="_blank" style="margin: 2px; color: rgb(178, 31, 53);">Space!</a>
+          <a href="https://linuxreport.net" target="_blank" style="margin: 2px; color: #f47421; text-decoration: none; font-weight: 500;">Linux</a>
+          <a href="https://pvreport.org" target="_blank" style="margin: 2px; color: #ffd700; text-decoration: none; font-weight: 500;">PV</a>
+          <a href="https://aireport.keithcu.com" target="_blank" style="margin: 2px; color: #00d4ff; text-decoration: none; font-weight: 500;">AI</a>
+          <a href="https://news.thedetroitilove.com" target="_blank" style="margin: 2px; color: #7b68ee; text-decoration: none; font-weight: 500;">Techno</a>
+          <a href="https://covidreport.org" target="_blank" style="margin: 2px; color: #ff6b6b; text-decoration: none; font-weight: 500;">Covid</a>
+          <a href="https://trumpreport.info" target="_blank" style="margin: 2px; color: #32cd32; text-decoration: none; font-weight: 500;">Truth</a>
+          <a href="https://news.spaceelevatorwiki.com" target="_blank" style="margin: 2px; color: #b22222; text-decoration: none; font-weight: 500;">Space!</a>
           <a href="https://keithcu.com/wordpress/?page_id=407/" target="_blank" style="margin: 2px; color: inherit;">Me</a>
         </div>
         <select id="theme-select" onchange="setTheme(this.value)" style="margin-left:20px; padding:5px;">
